--- a/src/components/Body2.css
+++ b/src/components/Body2.css
@@ -1,3 +1,42 @@
+.benefitborder{
+
+    border: 1px solid #111827;
+    
+    border-radius: 25px;
+    
+    padding: 20px; 
+    width: 640px;
+    height: 550px;  
+    box-sizing: border-box;
+    position: relative;
+ 
+ left: 150px;
+padding-bottom: 50px;
+
+
+}
+.benefitwomanborder{
+
+
+
+    border: 1px solid #111827;
+    
+    border-radius: 25px;
+    
+    padding: 20px; 
+    width: 500px;
+    height: 550px;  
+    box-sizing: border-box;
+    position: relative;
+ 
+ left: 150px;
+padding-bottom: 50px;
+
+padding-left: 50px;
+
+}
+
+
 .benefits{
     text-align: center;
     color:#2c4530;
@@ -10,17 +49,45 @@
     font-size: 40px;
 
 }
+
+       
 .firstline{
     align-items:center;
     display:flex;
     justify-content: space-evenly;
-    border-left: 30px;
+
 }
 .img{
 
     border-radius: 50%;
-    border-left: 60px;
+    border-left: 20px;
 }
-.secondline{
-    padding-left: 30px;
+
+.wrapper{
+
+    display: flex;
+    justify-content:space-evenly;
+}
+
+
+.womanbenefit{
+    
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: relative;
+        z-index: 2;
+        
+    max-width: 100%;
+    display: inline-block;
+    top:-60px;
+    left: -14%;
+    }
+.undercarrot{
+    z-index: 1;
+    bottom: auto;
+    right: auto;
+    width: 120px;
+    top: -11%;
+    left: -14%;
 }
