--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,6 +9,15 @@ padding-left: 140px;
 
 
 }
+.options{
+padding-right: 60px;
+display: flex;
+align-items: center;
+justify-content:  space-around;
+}
+.optionssss{
+  padding-right: 50px;
+}
 .subBar{
     background-color: #2c4530;
     display: flex;
@@ -26,11 +35,18 @@ padding-left: 80px;
 
 }
 .button{
-border-radius: 5px;
+border-radius: 3px;
 border-color: #a2de64;
 border-width: 3px;
 color: #a2de64;
 text-align: center;
+justify-content: center;
+grid-column-gap: 8px;
+    border-radius: 8px;
+    padding: 12px 20px;
+    font-size: 1rem;
+  margin-right: 20px;
+
 }
 .text{
   
