--- a/src/components/Body1.css
+++ b/src/components/Body1.css
@@ -1,68 +1,62 @@
-.body{
-    background-color: #ffce98;
+.body {
+  background-color: #ffce98;
 }
 
-
-.harvest{
-    color:#2c4530;
-    font-size: 20px;
-    padding-top: 30px;
-    text-align: center;
-  
-}
-.fresh{
-    color:#2c4530;
-    font-size: 50px;
-    text-align: center;
-    
-
-}
-.lorem{
-    color:#4f5b51;
-    text-align: center;
+.harvest {
+  color: #2c4530;
+  font-size: 20px;
+  padding-top: 30px;
+  text-align: center;
 }
 
-.group{
+.fresh {
+  color: #2c4530;
+  font-size: 50px;
+  text-align: center;
+}
 
-display: flex;
+.lorem {
+  color: #4f5b51;
+  text-align: center;
+}
 
-    align-items: center;
-    height: 100vh;
-    justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 20px;
+.group {
+  display: flex;
 
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
 }
 .outer-border {
-
-    background-color: #FFE4C4;
-    border-radius: 15px;
-    padding: 20px;
-    max-width: 320px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    overflow: hidden;
-
+  background-color: #ffe4c4;
+  border-radius: 15px;
+  padding: 20px;
+  max-width: 320px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  overflow: hidden;
 }
 
-.image{
-    width: 100%;
-    border-radius: 10px;
+.image {
+  width: 100%;
+  border-radius: 10px;
 }
 
-.inner-text{
-    margin-top: 15px;
+.inner-text {
+  margin-top: 15px;
 }
 
 .h3 {
-    color: #2B2B2B;
-    margin-bottom: 10px;
+  color: #2b2b2b;
+  margin-bottom: 10px;
 }
 
 .p {
-    color: #4F4F4F;
-    font-size: 14px;
-    line-height: 1.5;
+  color: #4f4f4f;
+  font-size: 14px;
+  line-height: 1.5;
 }
