--- a/src/components/Body3.css
+++ b/src/components/Body3.css
@@ -1,55 +1,44 @@
-.videospec{width:100%;
-height:100%;
-z-index: 1;
+.videospec {
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
-.contents{
-   
-    grid-row-gap: 48px;
-    flex-direction: column;
-    align-items: flex-start;
-    display: flex;
-    color:whitesmoke;
+.contents {
+  grid-row-gap: 48px;
+  flex-direction: column;
+  align-items: flex-start;
+  display: flex;
+  color: whitesmoke;
 }
 
-.reach{
-    font-size: 30px;
+.reach {
+  font-size: 30px;
 }
-.Contact-Us{
-
-    margin-top: 60px;
-    background-color:#a2de64;
-    box-shadow: none;
-    color: #2a3f2d;
-    transition: box-shadow .2s, transform .2s;
-    order: 1px solid var(--green-700);
-    height: 48px;
-    grid-column-gap: 8px;
-    border-radius: 8px;
-    padding: 12px 20px;
-    font-size: 1rem;
+.Contact-Us {
+  margin-top: 60px;
+  background-color: #a2de64;
+  box-shadow: none;
+  color: #2a3f2d;
+  transition: box-shadow 0.2s, transform 0.2s;
+  order: 1px solid var(--green-700);
+  height: 48px;
+  grid-column-gap: 8px;
+  border-radius: 8px;
+  padding: 12px 20px;
+  font-size: 1rem;
   margin-bottom: 50px;
-
-
-
-
 }
 
-.borderss{
-    border: 1px solid #111827;
-    background-color: #2c4530;
-    border-radius: 25px;
-    
-    padding: 20px; 
-    width: 640px;
-    height: 450px;  
-    box-sizing: border-box;
-    position: relative;
- z-index: 2;
- left: 150px;
- top: -750px;
-
+.borderss {
+  border: 1px solid #111827;
+  background-color: #2c4530;
+  border-radius: 25px;
+  padding: 20px;
+  width: 640px;
+  /* box-sizing: border-box;*/
+  position: relative;
+  z-index: 2;
+  left: 150px;
+  top: -750px;
 }
-
-   
-
