--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,23 +1,23 @@
 .page{
   background-color: #fdf8e9;
-
-
 }
 
 .side-text{
 padding-left: 140px;
-
-
 }
+
 .options{
 padding-right: 60px;
 display: flex;
 align-items: center;
 justify-content:  space-around;
 }
+
 .optionssss{
-  padding-right: 50px;
-}
+  padding-right: 70px;
+  justify-content: space-between;
+  }
+
 .subBar{
     background-color: #2c4530;
     display: flex;
@@ -27,15 +27,14 @@ justify-content:  space-around;
   border-radius: 50px;
   border-width: 25px;
   border-color: #2c4530;
-
 }
+
 .images{
-
 padding-left: 80px;
-
 }
+
 .button{
-border-radius: 3px;
+border-radius: 8px;
 border-color: #a2de64;
 border-width: 3px;
 color: #a2de64;
@@ -46,32 +45,38 @@ grid-column-gap: 8px;
     padding: 12px 20px;
     font-size: 1rem;
   margin-right: 20px;
+  height:48px;
+  min-width: 88px;
+  font-family: "Inter",sans-serif;
+  font-weight: 500;
+  display: flex;
 
 }
+
 .text{
-  
-  color: var(--green-900);
+   color: var(--green-900);
   margin-bottom: 0;
   font-family: Poppins, sans-serif;
   font-size: 60px;
   text-wrap: 50px;
   text-decoration-thickness: 40px;
 }
+
 .texttop{
   font-size: 17px;
   padding-top: 100px;
 }
+
 .images{
 display: flex;
-
 align-items: center;
   flex-wrap: wrap;
 object-fit: cover;
 margin: 50px;
 }
-.pumpkin {
 
-    width: 450px;
+.pumpkin {
+ width: 450px;
     justify-content: center;
     align-items: center;
     margin-left: auto;
@@ -81,6 +86,7 @@ margin: 50px;
     position: relative;
     right: 0%;
 }
+
 .cabbage{
   object-fit: cover;
   padding-left: 0%;
@@ -100,6 +106,7 @@ margin: 50px;
 .paragraph{
   color:#9ba3af
 }
+
 .discover-button {
   background-color: #a2de64;
   perspective: 1000px;
@@ -115,8 +122,7 @@ margin-top: 60px;
 margin-bottom: 50px;}
 
     .Contact{
-
-      margin-top: 60px;
+margin-top: 60px;
         background-color: #ff8a4a;
         box-shadow: none;
         color: #2a3f2d;
